--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -46,7 +46,6 @@ allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
-allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.140;
 allow 104.244.75.74;
@@ -67,16 +66,13 @@ allow 107.189.1.160;
 allow 107.189.1.228;
 allow 107.189.12.3;
 allow 107.189.12.7;
-allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.253;
 allow 107.189.13.254;
-allow 107.189.13.91;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
 allow 107.189.2.108;
-allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
@@ -95,7 +91,6 @@ allow 107.189.7.141;
 allow 107.189.7.144;
 allow 107.189.7.168;
 allow 107.189.8.133;
-allow 107.189.8.136;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.56;
@@ -154,7 +149,6 @@ allow 146.19.254.154;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
-allow 148.113.152.91;
 allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -615,7 +609,6 @@ allow 198.98.57.74;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.195.248.168;
-allow 199.195.249.214;
 allow 199.195.251.119;
 allow 199.195.253.124;
 allow 199.195.253.156;
@@ -751,7 +744,6 @@ allow 205.185.113.8;
 allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
-allow 205.185.119.35;
 allow 205.185.121.170;
 allow 205.185.121.177;
 allow 205.185.123.93;
@@ -760,7 +752,6 @@ allow 206.166.251.193;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
-allow 209.141.37.94;
 allow 209.141.40.68;
 allow 209.141.41.25;
 allow 209.141.45.141;
@@ -768,7 +759,6 @@ allow 209.141.45.81;
 allow 209.141.46.203;
 allow 209.141.51.180;
 allow 209.141.51.30;
-allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.58.254;
 allow 212.192.23.129;
@@ -845,12 +835,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -976,7 +963,6 @@ allow 2605:aa80:0:9::3;
 allow 2605:e440:3::3ef;
 allow 2605:e440:38::21a;
 allow 2607:5300:201:3100::35c5;
-allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
@@ -1099,7 +1085,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1416,6 +1401,7 @@ allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
+allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
@@ -1498,7 +1484,6 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.153;
 allow 45.61.185.172;
-allow 45.61.186.203;
 allow 45.61.188.15;
 allow 45.66.35.10;
 allow 45.66.35.20;
@@ -1561,7 +1546,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
