--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -46,7 +46,6 @@ set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
-set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.75.74;
@@ -67,16 +66,13 @@ set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.7;
-set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
-set_real_ip_from 107.189.13.91;
 set_real_ip_from 107.189.14.4;
 set_real_ip_from 107.189.14.43;
 set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
-set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
@@ -95,7 +91,6 @@ set_real_ip_from 107.189.7.141;
 set_real_ip_from 107.189.7.144;
 set_real_ip_from 107.189.7.168;
 set_real_ip_from 107.189.8.133;
-set_real_ip_from 107.189.8.136;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.56;
@@ -154,7 +149,6 @@ set_real_ip_from 146.19.254.154;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
-set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -615,7 +609,6 @@ set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
 set_real_ip_from 198.98.62.158;
 set_real_ip_from 199.195.248.168;
-set_real_ip_from 199.195.249.214;
 set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
@@ -751,7 +744,6 @@ set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
-set_real_ip_from 205.185.119.35;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
@@ -760,7 +752,6 @@ set_real_ip_from 206.166.251.193;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
-set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.40.68;
 set_real_ip_from 209.141.41.25;
 set_real_ip_from 209.141.45.141;
@@ -768,7 +759,6 @@ set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
-set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
 set_real_ip_from 212.192.23.129;
@@ -845,12 +835,9 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -976,7 +963,6 @@ set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2605:e440:3::3ef;
 set_real_ip_from 2605:e440:38::21a;
 set_real_ip_from 2607:5300:201:3100::35c5;
-set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
@@ -1099,7 +1085,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1416,6 +1401,7 @@ set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:de40:21:1be4::;
+set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
@@ -1498,7 +1484,6 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.61.185.172;
-set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.188.15;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
@@ -1561,7 +1546,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
