--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -224,7 +224,6 @@ set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2605:e440:3::3ef;
 set_real_ip_from 2605:e440:38::21a;
 set_real_ip_from 2607:5300:201:3100::35c5;
-set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
@@ -346,7 +345,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -663,3 +661,4 @@ set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:de40:21:1be4::;
+set_real_ip_from 2c0f:6c0:0:d::d28b;
