--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -63,6 +63,7 @@ allow 107.189.10.175;
 allow 107.189.1.111;
 allow 107.189.11.111;
 allow 107.189.1.160;
+allow 107.189.1.175;
 allow 107.189.1.228;
 allow 107.189.12.3;
 allow 107.189.12.7;
@@ -143,6 +144,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.98.11.62;
 allow 144.126.133.74;
 allow 144.208.79.169;
 allow 146.19.254.154;
@@ -810,6 +812,7 @@ allow 23.129.64.163;
 allow 23.129.64.164;
 allow 23.129.64.165;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -826,7 +829,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -835,13 +837,10 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -884,6 +883,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -950,6 +950,7 @@ allow 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
+allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
@@ -1110,7 +1111,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1421,7 +1421,6 @@ allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
 allow 37.228.129.153;
-allow 37.228.129.162;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1536,6 +1535,7 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
+allow 46.183.216.212;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1546,7 +1546,6 @@ allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
-allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.81.222.62;
