--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -572,6 +572,7 @@ allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.246.231.197;
 allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
@@ -837,11 +838,12 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
+allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1087,6 +1089,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1555,6 +1558,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
