--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -267,7 +267,6 @@ allow 2620:18c:0:192::e0:166;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
-allow 2803:6d90:111::67;
 allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
@@ -547,6 +546,7 @@ allow 2a0d:bbc7::f816:3eff:fe84:8a9e;
 allow 2a0d:bbc7::f816:3eff:fec7:9bc8;
 allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
+allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
