--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -101,7 +101,6 @@ deny 108.59.12.3;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
-deny 109.228.160.190;
 deny 109.237.27.11;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -224,7 +223,6 @@ deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
-deny 177.93.140.66;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -828,7 +826,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -837,13 +834,11 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
-deny 23.191.200.28;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1010,7 +1005,6 @@ deny 2620:7:6001::120;
 deny 2620:95:4007::111;
 deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
-deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
@@ -1290,6 +1284,7 @@ deny 2a0d:bbc7::f816:3eff:fe84:8a9e;
 deny 2a0d:bbc7::f816:3eff:fec7:9bc8;
 deny 2a0d:bbc7::f816:3eff:fee6:ca14;
 deny 2a0d:bbc7::f816:3eff:fee9:3e45;
+deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
@@ -1519,6 +1514,7 @@ deny 45.84.107.172;
 deny 45.84.107.174;
 deny 45.84.107.182;
 deny 45.84.107.198;
+deny 45.84.107.200;
 deny 45.84.107.222;
 deny 45.84.107.33;
 deny 45.84.107.47;
