--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -267,7 +267,6 @@ deny 2620:18c:0:192::e0:166;
 deny 2620:7:6001::120;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
-deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
@@ -547,6 +546,7 @@ deny 2a0d:bbc7::f816:3eff:fe84:8a9e;
 deny 2a0d:bbc7::f816:3eff:fec7:9bc8;
 deny 2a0d:bbc7::f816:3eff:fee6:ca14;
 deny 2a0d:bbc7::f816:3eff:fee9:3e45;
+deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
