--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -101,7 +101,6 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.237.27.11;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -224,7 +223,6 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -828,7 +826,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -837,13 +834,11 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1010,7 +1005,6 @@ set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
-set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
@@ -1290,6 +1284,7 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fe84:8a9e;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fec7:9bc8;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fee6:ca14;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
+set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
@@ -1519,6 +1514,7 @@ set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.174;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
+set_real_ip_from 45.84.107.200;
 set_real_ip_from 45.84.107.222;
 set_real_ip_from 45.84.107.33;
 set_real_ip_from 45.84.107.47;
